--- a/synapse-fe/pubspec.yaml
+++ b/synapse-fe/pubspec.yaml
@@ -7,6 +7,10 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  http: ^1.6.0
+  shared_preferences: ^2.2.2
+  google_fonts: ^6.1.0
+  flutter_svg: ^2.2.3
   flutter:
     sdk: flutter
 
@@ -17,3 +21,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+      - assets/images/
+      - assets/icons/
