--- a/synapse-fe/pubspec.yaml
+++ b/synapse-fe/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   shared_preferences: ^2.2.2
   google_fonts: ^6.1.0
   flutter_svg: ^2.2.3
+  intl: ^0.19.0
+  flutter_launcher_icons: "^0.13.1"
   flutter:
     sdk: flutter
 
@@ -19,8 +21,17 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  adaptive_icon_background: "#4DFED1"
+  adaptive_icon_foreground: "assets/images/app_icon.png"
+
 flutter:
   uses-material-design: true
   assets:
       - assets/images/
+      - assets/images/mapel/
+      - assets/images/pembiasaan/
       - assets/icons/
